picturas-chart/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: EXAMPLE
  labels:
    app: EXAMPLE
spec:
  selector:
    matchLabels:
      app: EXAMPLE
  template:
    metadata:
      labels:
        app: EXAMPLE
    spec:
      containers:
        - name: EXAMPLE
          image: TODO/EXAMPLE:latest
          ports:
            - containerPort: 3000
