picturas-chart/base/metrics-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: EXAMPLE-metrics
  labels:
    app: EXAMPLE
spec:
  type: ClusterIP
  ports:
    - name: http-metrics
      port: 9121
      targetPort: 9121
  selector:
    name: EXAMPLE
