picturas-chart/base/service-clusterIp.yaml
apiVersion: v1
kind: Service
metadata:
  name: EXAMPLE
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
  selector:
    name: EXAMPLE
