picturas-chart/base/service-nodePort.yaml
apiVersion: v1
kind: Service
metadata:
  name: EXAMPLE
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 3000
  selector:
    name: EXAMPLE
